# PyAurora4X

./: .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  BATCH_004_SUMMARY.md  CHANGELOG.md  COLONY_INFRASTRUCTURE_SYSTEM.md  FLEET_COMMAND_IMPLEMENTATION.md  FLEET_COMMAND_INTEGRATION_SUMMARY.md  IMPROVEMENTS_INVENTORY.md  JUMP_POINT_SYSTEM_SUMMARY.md  LICENSE  PLAN.md  README.md  SHIPYARD_INTEGRATION_SUMMARY.md  SHIPYARD_TESTING.md  STATUS.md  TASKS.md  VICTORY_SYSTEM_IMPLEMENTATION.md  capture_screenshot.py  main.py  pyproject.toml  pytest.ini  replit.md  run_shipyard_tests.py  streamlit_dashboard.py  victory_test_fixes_summary.md
attached_assets/: Pasted--Modules-textual-urwid-pygame-kivy-Flask-HTMX-Dash-rebound-numpy-pydantic-pytest-tinydb-d-1749798582891_1749798582893.txt
data/: ship_components.json  techs.json
docs/: AURORA_PARITY_ROADMAP.md  README.md  advanced_fleet_command.md  colony_management.md  contributing.md  design_overview.md  fleet_combat.md  game_turns.md  gameplay_guide.md  jump_point_travel_system.md  jump_points.md  ship-design-system-implementation.md  streamlit_dashboard.md
pyaurora4x/: __init__.py
scripts/: generate_ui_screenshot.py
tests/: __init__.py  test_colony_management.py  test_combat.py  test_empire_stats_widget.py  test_event_manager.py  test_fleet_command_integration.py  test_fleet_command_panel.py  test_fleet_panel.py  test_infrastructure_system.py  test_jump_point_system.py  test_jump_points.py  test_models.py  test_orbital_mechanics.py  test_research.py  test_save_manager.py  test_save_manager_additional.py  (+11 more)
(+43 files in other folders)
