[project]
name = "pyaurora4x"
version = "0.1.0"
description = "Terminal-based 4X space strategy game with realistic orbital mechanics"
readme = "README.md"
authors = [
    {name = "PyAurora4X Development Team"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "textual>=3.3.0",
    "tinydb>=4.8.2",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.mypy]
python_version = '3.11'
strict = true
